:PROPERTIES:
:ID:                     f9a623b7-0123-4845-ae03-8369426d961d
:END:

* Changelog
:PROPERTIES:
:ID:                     e08b1bd9-0803-4266-9049-36a8174b999e
:END:

** TBD
:PROPERTIES:
:ID:                     16a41084-d445-47a2-adb5-eff9569dd8d4
:END:

*Breaking changes*

- =vino-grape-template= does not include =vino-resources-template= anymore.

** v0.1.1
:PROPERTIES:
:ID: 26667ab6-6896-44bc-94b1-2526bde8cca4
:END:

Primarily a stabilization and bug-fix release.

*Fixes*

- [[https://github.com/d12frosted/vino/pull/84][vino#84]] Fix invalid vintage in rating title both in =vino-rating--create= and
  =vino-entry-update-title=.
- [[https://github.com/d12frosted/vino/pull/89][vino#89]] Add missing =autoload= comments.
- [[https://github.com/d12frosted/vino/pull/92][vino#92]] Do not allow to select vino entry that does not exist in
  =vino-entry-note-select=.
- Fix =vino-region-find-file= function.

*Features*

- [[https://github.com/d12frosted/vino/pull/85][vino#85]] Allow to create producer note when selecting non-existent producer.
  Affects =vino-producer-select=, =vino-producer-find-file= and
  =vino-entry-create=.
- [[https://github.com/d12frosted/vino/pull/86][vino#86]] Align behaviour of =vino-grape-select= with =vino-producer-select=, so
  the user is prompted to create a note when selecting a non-existent grape
  note.
- [[https://github.com/d12frosted/vino/pull/87][vino#87]] Allow to create region or appellation note when selecting non-existent
  region or appellation. Affects =vino-region-select=, =vino-region-find-file=
  and =vino-entry-create=.
- [[https://github.com/d12frosted/vino/pull/88][vino#88]] Switch to =vulpea-utils-with-note=.
- [[https://github.com/d12frosted/vino/pull/88][vino#88]] Use notes instead of ids in vino-netry
- [[https://github.com/d12frosted/vino/pull/91][vino#91]] Ask to acquire wine upon creation.
- Propose maximum 1 bottle of wine during consumption as default value.

*Breaking changes*
